
5.1.0 -> 5.2a0:
    - jbj: tests: add devtool-sanity (and other) tests.
    - jbj: rpmio: add additional tests.
    - jbj: add lcov targets throughout.
    - jbj: add (empty) SUBDIRS = # tests throughout.
    - jbj: add (empty) check-local: targets throughout.
    - jbj: rpmio: add lco/gcov coverage targets with rpm "make check".
    - jbj: rpmrepo: add :bncdata extension format for <location> display.
    - jbj: pass dataEnd to regionSwab() when unloading.
    - jbj: disable the headerLoad speedup's until headerUnload changes are done.
    - jbj: swab integer tag data in headerGet, not headerLoad (measured 6.9% rpm-V speedup ymmv).
    - jbj: compute tag store w subtract (measured 26.3% rpm -qa speedup ymmv).
    - jbj: initialize ts->PRCO lazily (measured 20.4% rpm -qa speedup ymmv).
    - glen: print error when makeTempPath fails due missing temp dir
    - jbj: add _fdopen to FDIO_t, expose fdbg(), make lzdio.c standalone.
    - jbj: expose XfdLink/XfdFree/XfdNew, nuke the FDIO_t vectors.
    - jbj: eliminate unused FDIO_t vectors. XfdLink/XfdFree/XfdNew need nuking.
    - jbj: create lzdio.c to carry lzma comprssion, possibly w dlopen().
    - jbj: merge OpenSUSE lzma.diff patch.
    - jbj: preliminary support for internal -lzma (non-functional atm).
    - jbj: add lzma checkout to devtool system target.
    - jbj: disable loop unraveling error msgs for now. better needs to be done.
    - jbj: permit firefox debugging by creating an empty dir (#444310).
    - afb/rse: add initial "devtool standalone" and Autoconf support for building against LZMA Utils
    - jbj: add --enable-build-gcov for CFLAGS -fprofile-arcs -ftest-coverage.
    - jbj: header: free tag data on error retrurn with damaged data.
    - rpm.org: rpmsw: insure that time has passed while calibrating (#435309).
    - jbj: header: fix: avoid double free with damaged data (#442761).
    - jbj: rpmte: revert to individual tags instead of RPMTAG_NVRA.